ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------

01/27/09 Remi Ricard (papaDoc)
         * Add an epsilon to the testRotationalLimit to avoid round off error
           or numerical error.
         * Add an unittest which had a numerical error in the angle value.

01/23/09 Remi Ricard (papaDoc)
         * Start the implementation of a better testRotationalLimit
         * Rename testRotationalLimit to testLimit
         * Add new function testRotationalLimit, change  getInfo API
         * Hinge now use the new testRotationalLimit
         * Add unit test

01/23/09 Remi Ricard (papaDoc)
         * Add new function dJointSetUniversalAxis1Offset and dJointSetUniversalAxis2Offset
         * Add unittest for those funcitons.

01/23/09 Remi Ricard (papaDoc)
         * Fix problem with dJointGetUniversalAngle2 when the joint is attached to
           only a body 2. The sign was inverted.
         * Add unit test to verify for this problem

01/21/09 Remi Ricard (papaDoc)
         * Fix bug reported by Tilman: dxJointPU::getInfo1 was setting twice the
           limit of limot1 to zero and not limot2

01/17/09 Daniel K. O.
        * Fixed a bug in dSpaceCollide2: if both geoms are not in spaces they would
          not have valid AABBs.

12/20/08 Daniel K. O.
        * New functions: dJointEnable, dJointDisable, dJointIsEnabled
          (patch #2454764).

12/19/08 Daniel K. O.
        * Removed inline asm statements that break builds on 64-bit VC++.

12/09/08 Daniel K. O.
        * Applied patch #2381592, which adds support for Kinematic Bodies.

12/06/08 Oleh Derevenko

       * Applied a patch by Martijn Buijs to make GIMPACT trimesh-ray collisions to